--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
     <!-- Root element for mounting the React app -->
     <div id="root"></div>
 
+    <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
     <!--
       ℹThis is the HTML template for your React app.
       React takes over and renders everything inside #root.
